--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editor"
-        app:layout_constraintBottom_toTopOf="@+id/text"
+        app:layout_constraintBottom_toTopOf="@+id/output_text"
         />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/output_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="start"
@@ -51,7 +51,7 @@
         android:text="Открыть"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintTop_toBottomOf="@+id/output_text"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
