--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:onClick="saveText"
         android:text="Сохранить"
+        app:layout_constraintBottom_toTopOf="@+id/output_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editor"
-        app:layout_constraintBottom_toTopOf="@+id/output_text"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/editor" />
 
     <TextView
         android:id="@+id/output_text"
@@ -48,12 +48,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:onClick="openText"
         android:text="Открыть"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/output_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/output_text" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
